--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
       { "extensions": [".js", ".jsx"] }
     ],
     "import/prefer-default-export": "off",
-    "react/jsx-one-expression-per-line": "off"
+    "react/jsx-one-expression-per-line": "off",
+    "import/no-extraneous-dependencies": "off",
   }
 }
