--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rocketseat/unform": "^1.6.1",
     "axios": "^0.19.0",
-    "history": "^4.9.0",
+    "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-awesome-modal": "^2.0.5",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
+    "react-toastify": "^5.5.0",
     "reactotron-react-js": "^3.3.2",
     "reactotron-redux": "^3.1.1",
     "reactotron-redux-saga": "^4.2.2",
     "redux": "^4.0.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.0.3",
     "styled-components": "^4.3.2"
   },
